<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/textView_tienescuenta"
        style="@style/themeTxtViewCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/txtV_cuenta"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />

    <ImageView
        android:id="@+id/imageView_derecho"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802"
        app:srcCompat="@drawable/derecho_log" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">
        <TextView
            android:id="@+id/textView_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/themeTxtViexLogin"
            android:text="@string/txtV_email"
            />
        <EditText
            android:id="@+id/editText_usr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/themeEtxtLogin"
            android:hint="@string/etxt_email"
             />
        <TextView
            android:id="@+id/textView_contra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/themeTxtViexLogin"
            android:text="@string/txtV_contraseña"
            />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            style="@style/themeEtxtLogin"
            android:hint="@string/etxt_contraseña"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/themeBtnInicio"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/textView_registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/themeTxtViewFot"
            android:text="@string/txtV_nuevo"
            android:textColor="#5dc1b9"
             />

        <TextView
            android:id="@+id/textView_txtMetodos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/themeTxtViewFot"
            android:text="@string/txtV_otros"
            android:textStyle="bold" />
        >
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView_google"
        style="@style/themeImgFot"
        android:layout_marginEnd="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/google_300221" />

    <ImageView
        android:id="@+id/imageView_facebook"
        style="@style/themeImgFot"
        android:layout_marginStart="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.285"
        app:srcCompat="@drawable/facebook_5968764" />
</androidx.constraintlayout.widget.ConstraintLayout>